springboot-mysql-istio/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot-mysql
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                      # 1
  http:
  - match:
    - uri:
        prefix: /springboot-mysql
    route:
    - destination:
        host: springboot-mysql             # 2
        port:
          number: 9090
